contrast fix

--- a/src/public/assets/css/contrast.css
+++ b/src/public/assets/css/contrast.css
@@ -31,7 +31,7 @@
 	border-bottom: 2px solid #000 !important;
 }
 .email{
-	box-shadow: 0 0px 3px #000000 !important;
+	box-shadow: 0 0px 2px #000000 !important;
 }
 .compose-cc{
 	border-bottom: 2px solid #000 !important;
@@ -95,10 +95,6 @@
 }
 .savedraft img{
 	filter: brightness(2) !important;
-}
-.archive{
-	border: 1px solid #000 !important;
-    padding-top: 0 !important;
 }
 .compose-attach img{
 	filter: brightness(0);
